commandQueue: fix units on travel time calculator not showing as valid #120

--- a/src/modules/command_queue/assets/style.less
+++ b/src/modules/command_queue/assets/style.less
@@ -203,6 +203,18 @@
             top: -6px;
             left: 26px;
         }
+
+        .valid {
+            color: #16600a;
+        }
+
+        .invalid {
+            color: #a1251f;
+        }
+
+        .neutral {
+            color: #000;
+        }
     }
 
     .dateType {
